Added local crawler, groupers, and did some refactoring

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,8 @@ scikit-learn
 tensorflow
 keras
 flask
-globus-sdk
+globus_sdk
 boto3
+git+https://github.com/materials-data-facility/MaterialsIO.git
+networkx
+xtract_sdk
