--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,21 @@ data/mdf_crawl/
 mdf_crawl.csv
 cdiac_crawl.csv
 scripts/
+
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
